Fixed chosen-drop not stretching to the width of the chosen

--- a/bootstrap-chosen.less
+++ b/bootstrap-chosen.less
@@ -55,6 +55,10 @@
     top: 100%;
     left: -9000px;
     z-index: @chznDropZIndex;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    width: 100%;
   }
 
   &.chosen-with-drop .chosen-drop {
@@ -225,6 +229,11 @@
       .box-shadow(@chznBoxShadow);
       margin: 1px 0;
       padding: 4px 20px 4px 4px;
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
+      width: 100%;
+      height: auto;
     }
   }
 
